@@ -139,10 +139,10 @@
 
 /* Force symbol exports */
 #define	COB_LIB_EXPIMP
-#include "libcob.h"
+#include "common.h"
 #include "coblocal.h"
 
-#include "libcob/cobgetopt.h"
+#include "cobgetopt.h"
 
 /* sanity checks */
 #if COB_MAX_WORDLEN > 255
@@ -4491,38 +4491,49 @@ cob_continue_after (cob_field *decimal_seconds)
 	internal_nanosleep (nanoseconds);
 }
 
+/* ALLOCATE statement
+   dataptr    -> used for ALLOCATE identifier only, NULL otherwise
+   retptr     -> RETURNING ret, may be NULL
+   initialize -> used for ALLOCATE CHARACTERS only, may be NULL
+*/
 void
 cob_allocate (unsigned char **dataptr, cob_field *retptr,
 	      cob_field *sizefld, cob_field *initialize)
 {
-	void			*mptr;
-	struct cob_alloc_cache	*cache_ptr;
-	cob_s64_t		fsize;
-	cob_field		temp;
+	const cob_s64_t		fsize = cob_get_llint (sizefld);
+	void			*mptr = NULL;
 
-	/* ALLOCATE */
 	cobglobptr->cob_exception_code = 0;
-	mptr = NULL;
-	fsize = cob_get_llint (sizefld);
 	if (fsize > COB_MAX_ALLOC_SIZE) {
 		cob_set_exception (COB_EC_STORAGE_IMP);
 	} else if (fsize > 0) {
-		cache_ptr = cob_malloc (sizeof (struct cob_alloc_cache));
-		mptr = malloc ((size_t)fsize);
+		const size_t memsize = (size_t)fsize;
+		if (initialize
+		 && initialize->data[0] == 0
+		 && COB_FIELD_TYPE (initialize) == COB_TYPE_ALPHANUMERIC_ALL) {
+			mptr = calloc (1, memsize);
+		} else {
+			mptr = malloc (memsize);
+		}
 		if (!mptr) {
 			cob_set_exception (COB_EC_STORAGE_NOT_AVAIL);
-			cob_free (cache_ptr);
 		} else {
+			struct cob_alloc_cache	*cache_ptr;
 			if (initialize) {
-				temp.size = (size_t)fsize;
+				cob_field	temp;
+				temp.size = memsize;
 				temp.data = mptr;
 				temp.attr = &const_alpha_attr;
 				cob_move (initialize, &temp);
-			} else {
-				memset (mptr, 0, (size_t)fsize);
 			}
+#if 0
+			else {
+				memset (mptr, 0, memsize);
+			}
+#endif
+			cache_ptr = cob_malloc (sizeof (struct cob_alloc_cache));
 			cache_ptr->cob_pointer = mptr;
-			cache_ptr->size = (size_t)fsize;
+			cache_ptr->size = memsize;
 			cache_ptr->next = cob_alloc_base;
 			cob_alloc_base = cache_ptr;
 		}
@@ -4535,13 +4546,13 @@ cob_allocate (unsigned char **dataptr, cob_field *retptr,
 	}
 }
 
+/* FREE statement */
 void
 cob_free_alloc (unsigned char **ptr1, unsigned char *ptr2)
 {
 	struct cob_alloc_cache	*cache_ptr;
 	struct cob_alloc_cache	*prev_ptr;
 
-	/* FREE */
 	cobglobptr->cob_exception_code = 0;
 	cache_ptr = cob_alloc_base;
 	prev_ptr = cob_alloc_base;
