@@ -1,4 +1,9 @@
 
+2021-11-22  Simon Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_allocate): only initialize upon request with optimized
+	  initialization for binary zeroes
+
 2021-11-14  Ron Norman <rjn@inglenet.com>
 
 	Implement FR #235: add bitwise operators for numeric items
